@@ -1,18 +1,12 @@
 package fxsampler.util;
 
-import java.io.File;
 import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.lang.module.ModuleReader;
+import java.lang.module.ResolvedModule;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
-import java.net.URL;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
-import java.nio.file.FileVisitResult;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.SimpleFileVisitor;
-import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
-import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -83,13 +77,11 @@ public class SampleScanner {
             
             Sample sample = null;
             try {
-                sample = (Sample)sampleClass.newInstance();
-            } catch (InstantiationException | IllegalAccessException e) {
+                sample = (Sample)sampleClass.getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                 e.printStackTrace();
             }
             if (sample == null || ! sample.isVisible()) continue;
-            
-            
 
             final String packageName = sampleClass.getPackage().getName();
             
@@ -118,131 +110,29 @@ public class SampleScanner {
      * Scans all classes.
      *
      * @return The classes
-     * @throws ClassNotFoundException
      * @throws IOException
      */
-    private Class<?>[] loadFromPathScanning() throws ClassNotFoundException, IOException {
-        final List<File> dirs = new ArrayList<>();
-        final List<File> jars = new ArrayList<>();
-        
-        // scan the classpath
-        ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
-        String path = "";
-        Enumeration<URL> resources = classLoader.getResources(path);
-        while (resources.hasMoreElements()) {
-            URL url = resources.nextElement();
-            
-            if (url.toExternalForm().contains("/jre/")) continue;
-            
-            // Only "file" and "jar" URLs are recognized, other schemes will be ignored.
-            String protocol = url.getProtocol().toLowerCase();
-            if ("file".equals(protocol)) {
-                dirs.add(new File(url.getFile()));
-            } else if ("jar".equals(protocol)) {
-                String fileName = new URL(url.getFile()).getFile();
-                
-                // JAR URL specs must contain the string "!/" which separates the name
-                // of the JAR file from the path of the resource contained in it, even
-                // if the path is empty.
-                int sep = fileName.indexOf("!/");
-                if (sep > 0) {
-                    jars.add(new File(fileName.substring(0, sep)));
-                }
-            }
-        }
+    private Class<?>[] loadFromPathScanning() throws IOException {
 
-        // and also scan the current working directory
-        final Path workingDirectory = new File("").toPath();
-        scanPath(workingDirectory, dirs, jars);
-        
-        // process directories first, then jars, so that classes take precedence
-        // over built jars (it makes rapid development easier in the IDE)
         final Set<Class<?>> classes = new LinkedHashSet<>();
-        for (File directory : dirs) {
-            classes.addAll(findClassesInDirectory(directory));
-        }
-        for (File jar : jars) {
-            String fullPath = jar.getAbsolutePath();
-            if (fullPath.endsWith("jfxrt.jar")) continue;
-            classes.addAll(findClassesInJar(new File(fullPath)));
-        }
+        // scan the module-path
+        ModuleLayer.boot().configuration().modules().stream()
+                .map(ResolvedModule::reference)
+                .filter(rm -> !isSystemModule(rm.descriptor().name()))
+                .forEach(mref -> {
+                    try (ModuleReader reader = mref.open()) {
+                        reader.list().forEach(c -> {
+                            final Class<?> clazz = processClassName(c);
+                            if (clazz != null) {
+                                classes.add(clazz);
+                            }
+                        });
+                    } catch (IOException ioe) {
+                        throw new UncheckedIOException(ioe);
+                    }
+                });
         
         return classes.toArray(new Class[classes.size()]);
-    }
-
-    private void scanPath(Path workingDirectory, final List<File> dirs, final List<File> jars) throws IOException {
-        Files.walkFileTree(workingDirectory, new SimpleFileVisitor<Path>() {
-            @Override public FileVisitResult visitFile(Path path, BasicFileAttributes attrs) throws IOException {
-                final File file = path.toFile();
-                final String fullPath = file.getAbsolutePath();
-                final String name = file.toString();
-                
-                if (fullPath.endsWith("jfxrt.jar") || name.contains("jre")) {
-                    return FileVisitResult.CONTINUE;
-                }
-                
-                if (file.isDirectory()) {
-                    dirs.add(file);
-                } else if (name.toLowerCase().endsWith(".jar")) {
-                    jars.add(file);
-                }
-                return FileVisitResult.CONTINUE;
-            }
-
-            @Override public FileVisitResult visitFileFailed(Path file, IOException ex) {
-                System.err.println(ex + " Skipping...");
-                return FileVisitResult.CONTINUE;
-            }
-        });
-    }
-
-    private List<Class<?>> findClassesInDirectory(File directory) throws IOException {
-        List<Class<?>> classes = new ArrayList<>();
-        if (!directory.exists()) {
-            System.out.println("Directory does not exist: " + directory.getAbsolutePath());
-            return classes;
-        }
-        
-        processPath(directory.toPath(), classes);
-        return classes;
-    }
-
-    private List<Class<?>> findClassesInJar(File jarFile) throws IOException, ClassNotFoundException {
-        List<Class<?>> classes = new ArrayList<>();
-        if (!jarFile.exists()) {
-            System.out.println("Jar file does not exist here: " + jarFile.getAbsolutePath());
-            return classes;
-        }
-        
-        FileSystem jarFileSystem = FileSystems.newFileSystem(jarFile.toPath(), null);
-        processPath(jarFileSystem.getPath("/"), classes);
-        return classes;
-    }
-    
-    private void processPath(Path path, final List<Class<?>> classes) throws IOException {
-        final String root = path.toString();
-        
-        Files.walkFileTree(path, new SimpleFileVisitor<Path>() {
-            @Override public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) throws IOException {
-                String name = file.toString();
-                if (name.endsWith(".class") && ! ILLEGAL_CLASS_NAMES.contains(name)) {
-                    
-                    // remove root path to make class name correct in all cases
-                    name = name.substring(root.length());
-                    
-                    Class<?> clazz = processClassName(name);
-                    if (clazz != null) {
-                        classes.add(clazz);
-                    }
-                }
-                return FileVisitResult.CONTINUE;
-            }
-
-            @Override public FileVisitResult visitFileFailed(Path file, IOException ex) {
-                System.err.println(ex + " Skipping...");
-                return FileVisitResult.CONTINUE;
-            }
-        });        
     }
 
     private Class<?> processClassName(final String name) {
@@ -276,5 +166,17 @@ public class SampleScanner {
 //            e.printStackTrace();
         }
         return clazz;
-    } 
+    }
+
+    /**
+     * Return true if the given module name is a system module. There can be
+     * system modules in layers above the boot layer.
+     */
+    private static boolean isSystemModule(final String moduleName) {
+        return moduleName.startsWith("java.")
+                || moduleName.startsWith("javax.")
+                || moduleName.startsWith("javafx.")
+                || moduleName.startsWith("jdk.")
+                || moduleName.startsWith("oracle.");
+    }
 }
